# SpectraDB

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PUBLISH.md  README.md  TEST_PLAN.md  blog-post-devto.md  design.md  netlify.toml  perf.md  submissions.md
.github/workflows/: ci.yml  deploy-docs.yml
benches/: comparative.rs  inference.rs  multi_engine.rs
crates/spectradb-cli/: Cargo.toml
crates/spectradb-cli/src/: main.rs
crates/spectradb-core/: Cargo.toml
crates/spectradb-core/src/: config.rs  error.rs  lib.rs
crates/spectradb-core/src/ai/: llm.rs  mod.rs
crates/spectradb-core/src/auth/: rbac.rs  session.rs
crates/spectradb-core/src/cdc/: consumer_group.rs  cursor.rs
crates/spectradb-core/src/cluster/: membership.rs  mod.rs
crates/spectradb-core/src/engine/: db.rs  mod.rs  shard.rs  speculative_write.rs
crates/spectradb-core/src/facet/: event_sourcing.rs  mod.rs  relational.rs  schema_evolution.rs  timeseries.rs  vector_search.rs
crates/spectradb-core/src/io/: uring.rs
crates/spectradb-core/src/sql/: eval.rs  exec.rs  parser.rs  planner.rs  vectorized.rs
crates/spectradb-core/src/storage/: adaptive_compression.rs  cache.rs  columnar.rs  fractal_index.rs  mod.rs  predictive_prefetch.rs  self_healing.rs  sstable.rs  temporal_bloom.rs
crates/spectradb-core/src/util/: metrics.rs
crates/spectradb-native/: Cargo.toml
crates/spectradb-node/: Cargo.toml  package-lock.json
crates/spectradb-node/src/: lib.rs
crates/spectradb-python/: Cargo.toml  pyproject.toml
crates/spectradb-python/src/: lib.rs
crates/spectradb-server/: Cargo.toml
crates/spectradb-server/src/: handler.rs  main.rs  pgwire.rs
crates/tensordb-core/src/: config.rs  native_bridge.rs
crates/tensordb-core/src/ai/: gguf.rs  llm.rs  mod.rs  speculation.rs  sql_grammar.rs  tokenizer.rs  transformer.rs
crates/tensordb-core/src/ai/kernels/: avx2.rs  avx512.rs  i8mm.rs  mod.rs  neon.rs  scalar.rs
crates/tensordb-core/src/engine/: db.rs
crates/tensordb-native/: Cargo.toml
docs/: astro.config.mjs  package.json
docs/plans/: 2026-02-25-pre-publish-fixes.md  2026-02-28-eoac-implementation-plan.md  2026-03-02-turboinfer-design.md  2026-03-02-turboinfer-plan.md
docs/src/assets/: custom-theme.css
docs/src/components/: ArchitectureDiagram.astro  ConfigExplorer.astro  FeatureCard.astro  Hero.astro  PerformanceChart.astro  SqlPlayground.astro  TimelineVisual.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/ai/: cache-advisor.mdx  compaction-advisor.mdx  index.mdx  insights.mdx  query-advisor.mdx  risk-scoring.mdx
docs/src/content/docs/cluster/: raft.mdx  replication.mdx  scaling.mdx
docs/src/content/docs/concepts/: architecture.mdx  bitemporal.mdx  data-model.mdx  mvcc.mdx  read-path.mdx  write-path.mdx
docs/src/content/docs/engine/: fast-write.mdx  sharding.mdx  write-batching.mdx
docs/src/content/docs/features/: change-feeds.mdx  event-sourcing.mdx  full-text-search.mdx  schema-evolution.mdx  timeseries.mdx  vector-search.mdx
docs/src/content/docs/getting-started/: configuration.mdx  installation.mdx  quickstart.mdx
docs/src/content/docs/integrations/: cli.mdx  nodejs.mdx  python.mdx
docs/src/content/docs/performance/: benchmarks.mdx  tuning.mdx
docs/src/content/docs/reference/: api.mdx  config.mdx  errors.mdx
docs/src/content/docs/security/: authentication.mdx  authorization.mdx
docs/src/content/docs/sql/: ddl.mdx  dml.mdx  index.mdx  prepared-statements.mdx  queries.mdx  temporal-queries.mdx
docs/src/content/docs/sql/functions/: aggregate.mdx  datetime.mdx  index.mdx  numeric.mdx  string.mdx  window.mdx
docs/src/content/docs/storage/: bloom-filters.mdx  caching.mdx  compaction.mdx  compression.mdx  memtable.mdx  sstable.mdx  wal.mdx
examples/: ai_native.rs  bitemporal.rs  quickstart.rs
scripts/: ai_overhead_gate.sh  demo.sh  release_ai_report.sh
tests/: ai_core.rs  ai_sql_functions.rs  auth_rbac.rs  change_feeds.rs  data_interchange.rs  event_sourcing.rs  fts_sql.rs  llm_model_compare.rs  llm_nl2sql.rs  multilevel_compaction.rs  parquet_interchange.rs  query_engine_perf.rs  readme_examples.rs  schema_evolution.rs  sql_completeness.rs  sql_correctness.rs  sql_expressions.rs  sstable_roundtrip.rs  temporal_sql.rs  test_nl2sql_e2e.rs  timeseries_sql.rs  typed_schema.rs  write_batch.rs
