[package]
name = "spectradb"
version = "0.2.0"
edition = "2021"
description = "TensorDB — single-node, append-only, bitemporal ledger database with MVCC snapshot reads and SQL facet"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/tensor-db/tensorDB"
keywords = ["database", "bitemporal", "mvcc", "embedded", "ledger"]
categories = ["database-implementations"]

[workspace]
members = [
  ".",
  "crates/spectradb-core",
  "crates/spectradb-native",
  "crates/spectradb-cli",
  "crates/spectradb-server",
  "crates/spectradb-python",
  "crates/spectradb-node",
]
default-members = [
  ".",
  "crates/spectradb-core",
  "crates/spectradb-cli",
  "crates/spectradb-server",
]
resolver = "2"

[features]
default = ["llm"]
native = ["spectradb-core/native"]
simd = ["spectradb-core/simd"]
io-uring = ["spectradb-core/io-uring"]
parquet = ["spectradb-core/parquet"]
llm = ["spectradb-core/llm"]

[dependencies]
spectradb-core = { path = "crates/spectradb-core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sled = "0.34"
redb = "2"
fastrand = "2"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "multi_engine"
harness = false
