[package]
name = "spectradb-core"
version = "0.2.0"
edition = "2021"
description = "Core engine for TensorDB — an AI-native, bitemporal ledger database with MVCC, full SQL, and LSM storage"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/tensor-db/tensorDB"
keywords = ["database", "embedded", "bitemporal", "sql", "lsm"]
categories = ["database-implementations"]

[features]
default = ["llm"]
native = ["dep:spectradb-native"]
simd = []
io-uring = ["dep:io-uring"]
parquet = ["dep:parquet", "dep:arrow"]
llm = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
thiserror = "1"
crc32fast = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
fastrand = "2"
tracing = "0.1"
lz4_flex = "0.11"

spectradb-native = { path = "../spectradb-native", optional = true }
io-uring = { version = "0.7", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54", optional = true, default-features = false, features = ["json"] }
llama-cpp-2 = { version = "0.1.133", optional = true }
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
