[package]
name = "spectradb-python"
version = "0.2.0"
edition = "2021"

[lib]
name = "tensordb"
crate-type = ["cdylib"]

[features]
default = ["llm"]
llm = ["spectradb-core/llm"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
spectradb-core = { path = "../spectradb-core" }
serde_json = "1"
