[package]
name = "spectradb-server"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL wire protocol server for SpectraDB"
license = "MIT"

[[bin]]
name = "spectradb-server"
path = "src/main.rs"

[dependencies]
spectradb-core = { path = "../spectradb-core" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
md-5 = "0.10"
serde_json = "1"
